Fix .bleed: use height:100% chain instead of position:absolute to handle WP figure wrapper

--- a/style.css
+++ b/style.css
@@ -4177,14 +4177,17 @@ input[type="submit"]:hover,
    ========================================================================== */
 
 .bleed {
-	position: relative;
 	overflow: hidden;
 }
 
+.bleed figure,
+.bleed .wp-block-image {
+	height: 100%;
+	margin: 0;
+}
+
 .bleed img {
-	position: absolute;
-	top: 0;
-	left: 0;
+	display: block;
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
